# P9_NLP_Equipo1

./: .env.example  .gitignore  README.md  analyze_case.py  compare_pipelines.py  conftest.py  demo_case_sensitivity.py  demo_flujo.py  main.py  pyproject.toml  run_training_pipeline.py  run_training_transformer.py  test_predictor.py  train_baseline.py  tune_baseline.py
api/: main.py  schemas.py
app/: StreamlitGoogleAuth.py  streamlit_app.py  streamlit_login.py
data/raw/: comments_dQw4w9WgXcQ_20260511.csv  metricas.csv  mlflow_metricas (2).csv  mlflow_metricas.csv  test_integration_20260515_191204.csv  test_robustness_20260515_193430.csv  test_robustness_20260515_195216.csv  youtube_comments_MY4ZUk9RVYg.csv  youtube_comments_X_7hj0t48aU.csv  youtube_comments_yZ2p39BVwsE.csv
models/artifacts/baseline/: logistic_regression.joblib  tfidf_vectorizer.joblib  xgboost_classifier.joblib
models/artifacts/enhanced/: feature_scaler.joblib  logistic_regression.joblib  tfidf_vectorizer.joblib  xgboost_classifier.joblib
notebooks/: 01_eda.ipynb  03_transformer_vs_ensemble.ipynb
src/hatescan/: test_env.py
src/hatescan/database/: database.py
src/hatescan/evaluation/: compute_metrics.py
src/hatescan/models/: neural.py  predictor.py
src/hatescan/preprocessing/: __init__.py  cleaner.py  tokenizer.py
src/hatescan/scraping/: youtube_scraper.py
src/hatescan/training/: __init__.py  baseline.py  enhanced.py  hyperparameter_tuning.py  nlp_models.py  (+5 more)
tests/unit/: test_cleaner.py  test_integration_mlflow.py  test_mlflow.py  test_tokenizer.py  test_training_baseline.py
(+42 files in other folders)
