[project]
name = "p9-nlp-equipo1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "firebase-admin>=7.4.0",
    "google-api-python-client>=2.196.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "mlflow>=1.27.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
    "supabase>=2.30.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
]
